# streamlit_kits

./: config.yaml  helpers.py  instagram_analysis.ipynb  launch_analysis.ipynb  player_conversations.ipynb  pyproject.toml  requirements.txt  setup.py
executable/: instagram_analysis.py  player_name_analysis.py  readme.MD  setup.py
football_kits_data/: readme.md
