[tool.poetry]
name = "my_streamlit_app"
version = "0.1.0"
description = "My Streamlit app"
authors = ["Larson"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.13.0"
pandas = "^1.5.0"
# add other packages as needed

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
# add other dev packages as needed

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
